voidcsfml/include/voidcsfml/graphics.h

VOIDCSFML_API blendmode_initialize(void* self);
VOIDCSFML_API blendmode_initialize_8xr8xrBw1(void* self, int source_factor, int destination_factor, int blend_equation);
VOIDCSFML_API blendmode_initialize_8xr8xrBw18xr8xrBw1(void* self, int color_source_factor, int color_destination_factor, int color_blend_equation, int alpha_source_factor, int alpha_destination_factor, int alpha_blend_equation);
VOIDCSFML_API blendmode_setcolorsrcfactor_8xr(void* self, int color_src_factor);
VOIDCSFML_API blendmode_setcolordstfactor_8xr(void* self, int color_dst_factor);
VOIDCSFML_API blendmode_setcolorequation_Bw1(void* self, int color_equation);
VOIDCSFML_API blendmode_setalphasrcfactor_8xr(void* self, int alpha_src_factor);
VOIDCSFML_API blendmode_setalphadstfactor_8xr(void* self, int alpha_dst_factor);
VOIDCSFML_API blendmode_setalphaequation_Bw1(void* self, int alpha_equation);
VOIDCSFML_API operator_eq_PG5PG5(void* left, void* right, unsigned char* result);
VOIDCSFML_API operator_ne_PG5PG5(void* left, void* right, unsigned char* result);
VOIDCSFML_API blendmode_initialize_PG5(void* self, void* copy);
VOIDCSFML_API transform_initialize(void* self);
VOIDCSFML_API transform_initialize_Bw9Bw9Bw9Bw9Bw9Bw9Bw9Bw9Bw9(void* self, float a00, float a01, float a02, float a10, float a11, float a12, float a20, float a21, float a22);
VOIDCSFML_API transform_getmatrix(void* self, float** result);
VOIDCSFML_API transform_getinverse(void* self, void* result);
VOIDCSFML_API transform_transformpoint_Bw9Bw9(void* self, float x, float y, void* result);
VOIDCSFML_API transform_transformpoint_UU2(void* self, void* point, void* result);
VOIDCSFML_API transform_transformrect_WPZ(void* self, void* rectangle, void* result);
VOIDCSFML_API transform_combine_FPe(void* self, void* transform, void* result);
VOIDCSFML_API transform_translate_Bw9Bw9(void* self, float x, float y, void* result);
VOIDCSFML_API transform_translate_UU2(void* self, void* offset, void* result);
VOIDCSFML_API transform_rotate_Bw9(void* self, float angle, void* result);
VOIDCSFML_API transform_rotate_Bw9Bw9Bw9(void* self, float angle, float center_x, float center_y, void* result);
VOIDCSFML_API transform_rotate_Bw9UU2(void* self, float angle, void* center, void* result);
VOIDCSFML_API transform_scale_Bw9Bw9(void* self, float scale_x, float scale_y, void* result);
VOIDCSFML_API transform_scale_Bw9Bw9Bw9Bw9(void* self, float scale_x, float scale_y, float center_x, float center_y, void* result);
VOIDCSFML_API transform_scale_UU2(void* self, void* factors, void* result);
VOIDCSFML_API transform_scale_UU2UU2(void* self, void* factors, void* center, void* result);
VOIDCSFML_API operator_mul_FPeFPe(void* left, void* right, void* result);
VOIDCSFML_API operator_mul_FPeUU2(void* left, void* right, void* result);
VOIDCSFML_API transform_initialize_FPe(void* self, void* copy);
VOIDCSFML_API renderstates_initialize(void* self);
VOIDCSFML_API renderstates_initialize_PG5(void* self, void* blend_mode);
VOIDCSFML_API renderstates_initialize_FPe(void* self, void* transform);
VOIDCSFML_API renderstates_initialize_MXd(void* self, void* texture);
VOIDCSFML_API renderstates_initialize_8P6(void* self, void* shader);
VOIDCSFML_API renderstates_initialize_PG5FPeMXd8P6(void* self, void* blend_mode, void* transform, void* texture, void* shader);
VOIDCSFML_API renderstates_setblendmode_CPE(void* self, void* blend_mode);
VOIDCSFML_API renderstates_settransform_lbe(void* self, void* transform);
VOIDCSFML_API renderstates_settexture_MXd(void* self, void* texture);
VOIDCSFML_API renderstates_setshader_8P6(void* self, void* shader);
VOIDCSFML_API renderstates_initialize_mi4(void* self, void* copy);
VOIDCSFML_API transformable_initialize(void* self);
VOIDCSFML_API transformable_finalize(void* self);
VOIDCSFML_API transformable_setposition_Bw9Bw9(void* self, float x, float y);
VOIDCSFML_API transformable_setposition_UU2(void* self, void* position);
VOIDCSFML_API transformable_setrotation_Bw9(void* self, float angle);
VOIDCSFML_API transformable_setscale_Bw9Bw9(void* self, float factor_x, float factor_y);
VOIDCSFML_API transformable_setscale_UU2(void* self, void* factors);
VOIDCSFML_API transformable_setorigin_Bw9Bw9(void* self, float x, float y);
VOIDCSFML_API transformable_setorigin_UU2(void* self, void* origin);
VOIDCSFML_API transformable_getposition(void* self, void* result);
VOIDCSFML_API transformable_getrotation(void* self, float* result);
VOIDCSFML_API transformable_getscale(void* self, void* result);
VOIDCSFML_API transformable_getorigin(void* self, void* result);
VOIDCSFML_API transformable_move_Bw9Bw9(void* self, float offset_x, float offset_y);
VOIDCSFML_API transformable_move_UU2(void* self, void* offset);
VOIDCSFML_API transformable_rotate_Bw9(void* self, float angle);
VOIDCSFML_API transformable_scale_Bw9Bw9(void* self, float factor_x, float factor_y);
VOIDCSFML_API transformable_scale_UU2(void* self, void* factor);
VOIDCSFML_API transformable_gettransform(void* self, void* result);
VOIDCSFML_API transformable_getinversetransform(void* self, void* result);
VOIDCSFML_API transformable_initialize_dkg(void* self, void* copy);
VOIDCSFML_API color_initialize(void* self);
VOIDCSFML_API color_initialize_9yU9yU9yU9yU(void* self, uint8_t red, uint8_t green, uint8_t blue, uint8_t alpha);
VOIDCSFML_API color_initialize_saL(void* self, uint32_t color);
VOIDCSFML_API color_tointeger(void* self, uint32_t* result);
VOIDCSFML_API color_setr_9yU(void* self, uint8_t r);
VOIDCSFML_API color_setg_9yU(void* self, uint8_t g);
VOIDCSFML_API color_setb_9yU(void* self, uint8_t b);
VOIDCSFML_API color_seta_9yU(void* self, uint8_t a);
VOIDCSFML_API operator_eq_QVeQVe(void* left, void* right, unsigned char* result);
VOIDCSFML_API operator_ne_QVeQVe(void* left, void* right, unsigned char* result);
VOIDCSFML_API operator_add_QVeQVe(void* left, void* right, void* result);
VOIDCSFML_API operator_sub_QVeQVe(void* left, void* right, void* result);
VOIDCSFML_API operator_mul_QVeQVe(void* left, void* right, void* result);
VOIDCSFML_API color_initialize_QVe(void* self, void* copy);
VOIDCSFML_API vertex_initialize(void* self);
VOIDCSFML_API vertex_initialize_UU2(void* self, void* position);
VOIDCSFML_API vertex_initialize_UU2QVe(void* self, void* position, void* color);
VOIDCSFML_API vertex_initialize_UU2UU2(void* self, void* position, void* tex_coords);
VOIDCSFML_API vertex_initialize_UU2QVeUU2(void* self, void* position, void* color, void* tex_coords);
VOIDCSFML_API vertex_setposition_llt(void* self, void* position);
VOIDCSFML_API vertex_setcolor_9qU(void* self, void* color);
VOIDCSFML_API vertex_settexcoords_llt(void* self, void* tex_coords);
VOIDCSFML_API vertex_initialize_Y3J(void* self, void* copy);
VOIDCSFML_API vertexarray_initialize(void* self);
VOIDCSFML_API vertexarray_initialize_u9wvgv(void* self, int type, size_t vertex_count);
VOIDCSFML_API vertexarray_getvertexcount(void* self, size_t* result);
VOIDCSFML_API vertexarray_operator_indexset_vgvRos(void* self, size_t index, void* value);
VOIDCSFML_API vertexarray_operator_index_vgv(void* self, size_t index, void* result);
VOIDCSFML_API vertexarray_clear(void* self);
VOIDCSFML_API vertexarray_resize_vgv(void* self, size_t vertex_count);
VOIDCSFML_API vertexarray_append_Y3J(void* self, void* vertex);
VOIDCSFML_API vertexarray_setprimitivetype_u9w(void* self, int type);
VOIDCSFML_API vertexarray_getprimitivetype(void* self, int* result);
VOIDCSFML_API vertexarray_getbounds(void* self, void* result);
VOIDCSFML_API vertexarray_draw_kb9RoT(void* self, void* target, void* states);
VOIDCSFML_API vertexarray_draw_fqURoT(void* self, void* target, void* states);
VOIDCSFML_API vertexarray_draw_Xk1RoT(void* self, void* target, void* states);
VOIDCSFML_API vertexarray_initialize_EXB(void* self, void* copy);
VOIDCSFML_API (*shape_getpointcount_callback)(void*, size_t*);
VOIDCSFML_API (*shape_getpoint_callback)(void*, size_t, void*);
VOIDCSFML_API shape_finalize(void* self);
VOIDCSFML_API shape_settexture_MXdGZq(void* self, void* texture, unsigned char reset_rect);
VOIDCSFML_API shape_settexturerect_2k1(void* self, void* rect);
VOIDCSFML_API shape_setfillcolor_QVe(void* self, void* color);
VOIDCSFML_API shape_setoutlinecolor_QVe(void* self, void* color);
VOIDCSFML_API shape_setoutlinethickness_Bw9(void* self, float thickness);
VOIDCSFML_API shape_gettexture(void* self, void** result);
VOIDCSFML_API shape_gettexturerect(void* self, void* result);
VOIDCSFML_API shape_getfillcolor(void* self, void* result);
VOIDCSFML_API shape_getoutlinecolor(void* self, void* result);
VOIDCSFML_API shape_getoutlinethickness(void* self, float* result);
VOIDCSFML_API shape_getlocalbounds(void* self, void* result);
VOIDCSFML_API shape_getglobalbounds(void* self, void* result);
VOIDCSFML_API shape_initialize(void* self);
VOIDCSFML_API shape_update(void* self);
VOIDCSFML_API shape_setposition_Bw9Bw9(void* self, float x, float y);
VOIDCSFML_API shape_setposition_UU2(void* self, void* position);
VOIDCSFML_API shape_setrotation_Bw9(void* self, float angle);
VOIDCSFML_API shape_setscale_Bw9Bw9(void* self, float factor_x, float factor_y);
VOIDCSFML_API shape_setscale_UU2(void* self, void* factors);
VOIDCSFML_API shape_setorigin_Bw9Bw9(void* self, float x, float y);
VOIDCSFML_API shape_setorigin_UU2(void* self, void* origin);
VOIDCSFML_API shape_getposition(void* self, void* result);
VOIDCSFML_API shape_getrotation(void* self, float* result);
VOIDCSFML_API shape_getscale(void* self, void* result);
VOIDCSFML_API shape_getorigin(void* self, void* result);
VOIDCSFML_API shape_move_Bw9Bw9(void* self, float offset_x, float offset_y);
VOIDCSFML_API shape_move_UU2(void* self, void* offset);
VOIDCSFML_API shape_rotate_Bw9(void* self, float angle);
VOIDCSFML_API shape_scale_Bw9Bw9(void* self, float factor_x, float factor_y);
VOIDCSFML_API shape_scale_UU2(void* self, void* factor);
VOIDCSFML_API shape_gettransform(void* self, void* result);
VOIDCSFML_API shape_getinversetransform(void* self, void* result);
VOIDCSFML_API shape_draw_kb9RoT(void* self, void* target, void* states);
VOIDCSFML_API shape_draw_fqURoT(void* self, void* target, void* states);
VOIDCSFML_API shape_draw_Xk1RoT(void* self, void* target, void* states);
VOIDCSFML_API shape_initialize_r5K(void* self, void* copy);
VOIDCSFML_API circleshape_initialize_Bw9vgv(void* self, float radius, size_t point_count);
VOIDCSFML_API circleshape_setradius_Bw9(void* self, float radius);
VOIDCSFML_API circleshape_getradius(void* self, float* result);
VOIDCSFML_API circleshape_setpointcount_vgv(void* self, size_t count);
VOIDCSFML_API circleshape_getpointcount(void* self, size_t* result);
VOIDCSFML_API circleshape_getpoint_vgv(void* self, size_t index, void* result);
VOIDCSFML_API circleshape_settexture_MXdGZq(void* self, void* texture, unsigned char reset_rect);
VOIDCSFML_API circleshape_settexturerect_2k1(void* self, void* rect);
VOIDCSFML_API circleshape_setfillcolor_QVe(void* self, void* color);
VOIDCSFML_API circleshape_setoutlinecolor_QVe(void* self, void* color);
VOIDCSFML_API circleshape_setoutlinethickness_Bw9(void* self, float thickness);
VOIDCSFML_API circleshape_gettexture(void* self, void** result);
VOIDCSFML_API circleshape_gettexturerect(void* self, void* result);
VOIDCSFML_API circleshape_getfillcolor(void* self, void* result);
VOIDCSFML_API circleshape_getoutlinecolor(void* self, void* result);
VOIDCSFML_API circleshape_getoutlinethickness(void* self, float* result);
VOIDCSFML_API circleshape_getlocalbounds(void* self, void* result);
VOIDCSFML_API circleshape_getglobalbounds(void* self, void* result);
VOIDCSFML_API circleshape_setposition_Bw9Bw9(void* self, float x, float y);
VOIDCSFML_API circleshape_setposition_UU2(void* self, void* position);
VOIDCSFML_API circleshape_setrotation_Bw9(void* self, float angle);
VOIDCSFML_API circleshape_setscale_Bw9Bw9(void* self, float factor_x, float factor_y);
VOIDCSFML_API circleshape_setscale_UU2(void* self, void* factors);
VOIDCSFML_API circleshape_setorigin_Bw9Bw9(void* self, float x, float y);
VOIDCSFML_API circleshape_setorigin_UU2(void* self, void* origin);