src/graphics/lib.cr

require "../config"
require "../window/lib"
require "../system/lib"
@[Link("voidcsfml-graphics")]
lib VoidCSFML
  fun blendmode_initialize(self : Void*)
  fun blendmode_initialize_8xr8xrBw1(self : Void*, source_factor : LibC::Int, destination_factor : LibC::Int, blend_equation : LibC::Int)
  fun blendmode_initialize_8xr8xrBw18xr8xrBw1(self : Void*, color_source_factor : LibC::Int, color_destination_factor : LibC::Int, color_blend_equation : LibC::Int, alpha_source_factor : LibC::Int, alpha_destination_factor : LibC::Int, alpha_blend_equation : LibC::Int)
  fun blendmode_setcolorsrcfactor_8xr(self : Void*, color_src_factor : LibC::Int)
  fun blendmode_setcolordstfactor_8xr(self : Void*, color_dst_factor : LibC::Int)
  fun blendmode_setcolorequation_Bw1(self : Void*, color_equation : LibC::Int)
  fun blendmode_setalphasrcfactor_8xr(self : Void*, alpha_src_factor : LibC::Int)
  fun blendmode_setalphadstfactor_8xr(self : Void*, alpha_dst_factor : LibC::Int)
  fun blendmode_setalphaequation_Bw1(self : Void*, alpha_equation : LibC::Int)
  fun operator_eq_PG5PG5(left : Void*, right : Void*, result : Bool*)
  fun operator_ne_PG5PG5(left : Void*, right : Void*, result : Bool*)
  fun blendmode_initialize_PG5(self : Void*, copy : Void*)
  fun transform_initialize(self : Void*)
  fun transform_initialize_Bw9Bw9Bw9Bw9Bw9Bw9Bw9Bw9Bw9(self : Void*, a00 : LibC::Float, a01 : LibC::Float, a02 : LibC::Float, a10 : LibC::Float, a11 : LibC::Float, a12 : LibC::Float, a20 : LibC::Float, a21 : LibC::Float, a22 : LibC::Float)
  fun transform_getmatrix(self : Void*, result : LibC::Float**)
  fun transform_getinverse(self : Void*, result : Void*)
  fun transform_transformpoint_Bw9Bw9(self : Void*, x : LibC::Float, y : LibC::Float, result : Void*)
  fun transform_transformpoint_UU2(self : Void*, point : Void*, result : Void*)
  fun transform_transformrect_WPZ(self : Void*, rectangle : Void*, result : Void*)
  fun transform_combine_FPe(self : Void*, transform : Void*, result : Void*)
  fun transform_translate_Bw9Bw9(self : Void*, x : LibC::Float, y : LibC::Float, result : Void*)
  fun transform_translate_UU2(self : Void*, offset : Void*, result : Void*)
  fun transform_rotate_Bw9(self : Void*, angle : LibC::Float, result : Void*)
  fun transform_rotate_Bw9Bw9Bw9(self : Void*, angle : LibC::Float, center_x : LibC::Float, center_y : LibC::Float, result : Void*)
  fun transform_rotate_Bw9UU2(self : Void*, angle : LibC::Float, center : Void*, result : Void*)
  fun transform_scale_Bw9Bw9(self : Void*, scale_x : LibC::Float, scale_y : LibC::Float, result : Void*)
  fun transform_scale_Bw9Bw9Bw9Bw9(self : Void*, scale_x : LibC::Float, scale_y : LibC::Float, center_x : LibC::Float, center_y : LibC::Float, result : Void*)
  fun transform_scale_UU2(self : Void*, factors : Void*, result : Void*)
  fun transform_scale_UU2UU2(self : Void*, factors : Void*, center : Void*, result : Void*)
  fun operator_mul_FPeFPe(left : Void*, right : Void*, result : Void*)
  fun operator_mul_FPeUU2(left : Void*, right : Void*, result : Void*)
  fun transform_initialize_FPe(self : Void*, copy : Void*)
  fun renderstates_initialize(self : Void*)
  fun renderstates_initialize_PG5(self : Void*, blend_mode : Void*)
  fun renderstates_initialize_FPe(self : Void*, transform : Void*)
  fun renderstates_initialize_MXd(self : Void*, texture : Void*)
  fun renderstates_initialize_8P6(self : Void*, shader : Void*)
  fun renderstates_initialize_PG5FPeMXd8P6(self : Void*, blend_mode : Void*, transform : Void*, texture : Void*, shader : Void*)
  fun renderstates_setblendmode_CPE(self : Void*, blend_mode : Void*)
  fun renderstates_settransform_lbe(self : Void*, transform : Void*)
  fun renderstates_settexture_MXd(self : Void*, texture : Void*)
  fun renderstates_setshader_8P6(self : Void*, shader : Void*)
  fun renderstates_initialize_mi4(self : Void*, copy : Void*)
  fun transformable_initialize(self : Void*)
  fun transformable_finalize(self : Void*)
  fun transformable_setposition_Bw9Bw9(self : Void*, x : LibC::Float, y : LibC::Float)
  fun transformable_setposition_UU2(self : Void*, position : Void*)
  fun transformable_setrotation_Bw9(self : Void*, angle : LibC::Float)
  fun transformable_setscale_Bw9Bw9(self : Void*, factor_x : LibC::Float, factor_y : LibC::Float)
  fun transformable_setscale_UU2(self : Void*, factors : Void*)
  fun transformable_setorigin_Bw9Bw9(self : Void*, x : LibC::Float, y : LibC::Float)
  fun transformable_setorigin_UU2(self : Void*, origin : Void*)
  fun transformable_getposition(self : Void*, result : Void*)
  fun transformable_getrotation(self : Void*, result : LibC::Float*)
  fun transformable_getscale(self : Void*, result : Void*)
  fun transformable_getorigin(self : Void*, result : Void*)
  fun transformable_move_Bw9Bw9(self : Void*, offset_x : LibC::Float, offset_y : LibC::Float)
  fun transformable_move_UU2(self : Void*, offset : Void*)
  fun transformable_rotate_Bw9(self : Void*, angle : LibC::Float)
  fun transformable_scale_Bw9Bw9(self : Void*, factor_x : LibC::Float, factor_y : LibC::Float)
  fun transformable_scale_UU2(self : Void*, factor : Void*)
  fun transformable_gettransform(self : Void*, result : Void*)
  fun transformable_getinversetransform(self : Void*, result : Void*)
  fun transformable_initialize_dkg(self : Void*, copy : Void*)
  fun color_initialize(self : Void*)
  fun color_initialize_9yU9yU9yU9yU(self : Void*, red : UInt8, green : UInt8, blue : UInt8, alpha : UInt8)
  fun color_initialize_saL(self : Void*, color : UInt32)
  fun color_tointeger(self : Void*, result : UInt32*)
  fun color_setr_9yU(self : Void*, r : UInt8)
  fun color_setg_9yU(self : Void*, g : UInt8)
  fun color_setb_9yU(self : Void*, b : UInt8)
  fun color_seta_9yU(self : Void*, a : UInt8)
  fun operator_eq_QVeQVe(left : Void*, right : Void*, result : Bool*)
  fun operator_ne_QVeQVe(left : Void*, right : Void*, result : Bool*)
  fun operator_add_QVeQVe(left : Void*, right : Void*, result : Void*)
  fun operator_sub_QVeQVe(left : Void*, right : Void*, result : Void*)
  fun operator_mul_QVeQVe(left : Void*, right : Void*, result : Void*)
  fun color_initialize_QVe(self : Void*, copy : Void*)
  fun vertex_initialize(self : Void*)
  fun vertex_initialize_UU2(self : Void*, position : Void*)
  fun vertex_initialize_UU2QVe(self : Void*, position : Void*, color : Void*)
  fun vertex_initialize_UU2UU2(self : Void*, position : Void*, tex_coords : Void*)
  fun vertex_initialize_UU2QVeUU2(self : Void*, position : Void*, color : Void*, tex_coords : Void*)
  fun vertex_setposition_llt(self : Void*, position : Void*)
  fun vertex_setcolor_9qU(self : Void*, color : Void*)
  fun vertex_settexcoords_llt(self : Void*, tex_coords : Void*)
  fun vertex_initialize_Y3J(self : Void*, copy : Void*)
  fun vertexarray_initialize(self : Void*)
  fun vertexarray_initialize_u9wvgv(self : Void*, type : LibC::Int, vertex_count : LibC::SizeT)
  fun vertexarray_getvertexcount(self : Void*, result : LibC::SizeT*)
  fun vertexarray_operator_indexset_vgvRos(self : Void*, index : LibC::SizeT, value : Void*)
  fun vertexarray_operator_index_vgv(self : Void*, index : LibC::SizeT, result : Void*)
  fun vertexarray_clear(self : Void*)
  fun vertexarray_resize_vgv(self : Void*, vertex_count : LibC::SizeT)
  fun vertexarray_append_Y3J(self : Void*, vertex : Void*)
  fun vertexarray_setprimitivetype_u9w(self : Void*, type : LibC::Int)
  fun vertexarray_getprimitivetype(self : Void*, result : LibC::Int*)
  fun vertexarray_getbounds(self : Void*, result : Void*)
  fun vertexarray_draw_kb9RoT(self : Void*, target : Void*, states : Void*)
  fun vertexarray_draw_fqURoT(self : Void*, target : Void*, states : Void*)
  fun vertexarray_draw_Xk1RoT(self : Void*, target : Void*, states : Void*)
  fun vertexarray_initialize_EXB(self : Void*, copy : Void*)
  $shape_getpointcount_callback : Void*, LibC::SizeT* ->
  $shape_getpoint_callback : Void*, LibC::SizeT, Void* ->
  fun shape_finalize(self : Void*)
  fun shape_settexture_MXdGZq(self : Void*, texture : Void*, reset_rect : Bool)
  fun shape_settexturerect_2k1(self : Void*, rect : Void*)
  fun shape_setfillcolor_QVe(self : Void*, color : Void*)
  fun shape_setoutlinecolor_QVe(self : Void*, color : Void*)
  fun shape_setoutlinethickness_Bw9(self : Void*, thickness : LibC::Float)
  fun shape_gettexture(self : Void*, result : Void**)
  fun shape_gettexturerect(self : Void*, result : Void*)
  fun shape_getfillcolor(self : Void*, result : Void*)
  fun shape_getoutlinecolor(self : Void*, result : Void*)
  fun shape_getoutlinethickness(self : Void*, result : LibC::Float*)
  fun shape_getlocalbounds(self : Void*, result : Void*)
  fun shape_getglobalbounds(self : Void*, result : Void*)
  fun shape_initialize(self : Void*)
  fun shape_update(self : Void*)
  fun shape_setposition_Bw9Bw9(self : Void*, x : LibC::Float, y : LibC::Float)
  fun shape_setposition_UU2(self : Void*, position : Void*)
  fun shape_setrotation_Bw9(self : Void*, angle : LibC::Float)
  fun shape_setscale_Bw9Bw9(self : Void*, factor_x : LibC::Float, factor_y : LibC::Float)
  fun shape_setscale_UU2(self : Void*, factors : Void*)
  fun shape_setorigin_Bw9Bw9(self : Void*, x : LibC::Float, y : LibC::Float)
  fun shape_setorigin_UU2(self : Void*, origin : Void*)
  fun shape_getposition(self : Void*, result : Void*)
  fun shape_getrotation(self : Void*, result : LibC::Float*)
  fun shape_getscale(self : Void*, result : Void*)
  fun shape_getorigin(self : Void*, result : Void*)
  fun shape_move_Bw9Bw9(self : Void*, offset_x : LibC::Float, offset_y : LibC::Float)
  fun shape_move_UU2(self : Void*, offset : Void*)
  fun shape_rotate_Bw9(self : Void*, angle : LibC::Float)
  fun shape_scale_Bw9Bw9(self : Void*, factor_x : LibC::Float, factor_y : LibC::Float)
  fun shape_scale_UU2(self : Void*, factor : Void*)
  fun shape_gettransform(self : Void*, result : Void*)
  fun shape_getinversetransform(self : Void*, result : Void*)
  fun shape_draw_kb9RoT(self : Void*, target : Void*, states : Void*)
  fun shape_draw_fqURoT(self : Void*, target : Void*, states : Void*)
  fun shape_draw_Xk1RoT(self : Void*, target : Void*, states : Void*)
  fun shape_initialize_r5K(self : Void*, copy : Void*)
  fun circleshape_initialize_Bw9vgv(self : Void*, radius : LibC::Float, point_count : LibC::SizeT)
  fun circleshape_setradius_Bw9(self : Void*, radius : LibC::Float)
  fun circleshape_getradius(self : Void*, result : LibC::Float*)
  fun circleshape_setpointcount_vgv(self : Void*, count : LibC::SizeT)
  fun circleshape_getpointcount(self : Void*, result : LibC::SizeT*)
  fun circleshape_getpoint_vgv(self : Void*, index : LibC::SizeT, result : Void*)
  fun circleshape_settexture_MXdGZq(self : Void*, texture : Void*, reset_rect : Bool)
  fun circleshape_settexturerect_2k1(self : Void*, rect : Void*)
  fun circleshape_setfillcolor_QVe(self : Void*, color : Void*)
  fun circleshape_setoutlinecolor_QVe(self : Void*, color : Void*)
  fun circleshape_setoutlinethickness_Bw9(self : Void*, thickness : LibC::Float)
  fun circleshape_gettexture(self : Void*, result : Void**)
  fun circleshape_gettexturerect(self : Void*, result : Void*)
  fun circleshape_getfillcolor(self : Void*, result : Void*)
  fun circleshape_getoutlinecolor(self : Void*, result : Void*)
  fun circleshape_getoutlinethickness(self : Void*, result : LibC::Float*)
  fun circleshape_getlocalbounds(self : Void*, result : Void*)
  fun circleshape_getglobalbounds(self : Void*, result : Void*)
  fun circleshape_setposition_Bw9Bw9(self : Void*, x : LibC::Float, y : LibC::Float)
  fun circleshape_setposition_UU2(self : Void*, position : Void*)
  fun circleshape_setrotation_Bw9(self : Void*, angle : LibC::Float)
  fun circleshape_setscale_Bw9Bw9(self : Void*, factor_x : LibC::Float, factor_y : LibC::Float)
  fun circleshape_setscale_UU2(self : Void*, factors : Void*)
  fun circleshape_setorigin_Bw9Bw9(self : Void*, x : LibC::Float, y : LibC::Float)
  fun circleshape_setorigin_UU2(self : Void*, origin : Void*)
